--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <span class="text-primary">para Você e sua Empresa</span>
                 </h1>
                 <p class="hero-subtitle">
-                    Mais de 25 anos de experiência oferecendo assessoria contábil completa, 
+                    Mais de 20 anos de experiência oferecendo assessoria contábil completa, 
                     personalizada e humanizada para empresas de todos os segmentos.
                 </p>
                 <div class="hero-buttons">
@@ -102,10 +102,10 @@
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="300">
                     <div class="service-icon">
-                        <i class="fas fa-chart-line"></i>
+                        <i class="fas fa-certificate"></i>
                     </div>
-                    <h3 class="service-title">Contabilidade MEI</h3>
-                    <p class="service-description">Gestão contábil especializada para microempreendedores individuais.</p>
+                    <h3 class="service-title">Certificação Digital</h3>
+                    <p class="service-description">ECF e ECNPJ - Certificados digitais para pessoa física e jurídica.</p>
                 </div>
                 <div class="service-card" data-aos="fade-up" data-aos-delay="400">
                     <div class="service-icon">
@@ -137,7 +137,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">O que nossos clientes dizem</h2>
-                <p class="section-subtitle">Confiança e qualidade reconhecidas há mais de 25 anos</p>
+                <p class="section-subtitle">Confiança e qualidade reconhecidas há mais de 20 anos</p>
             </div>
             <div class="testimonials-carousel">
                 <div class="testimonial-item active">
@@ -238,7 +238,7 @@
                                 <i class="fas fa-check-circle"></i>
                             </div>
                             <div class="feature-text">
-                                <h4>25+ Anos de Experiência</h4>
+                                <h4>+20 Anos de Experiência</h4>
                                 <p>Mais de duas décadas atendendo empresas de todos os segmentos</p>
                             </div>
                         </div>
@@ -277,16 +277,12 @@
                         <div class="stat-label">Clientes Atendidos</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number" data-target="25">0</div>
+                        <div class="stat-number" data-target="20">0</div>
                         <div class="stat-label">Anos de Experiência</div>
                     </div>
                     <div class="stat-item">
                         <div class="stat-number" data-target="100">0</div>
                         <div class="stat-label">% Satisfação</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-number" data-target="15">0</div>
-                        <div class="stat-label">Profissionais</div>
                     </div>
                 </div>
             </div>
@@ -303,7 +299,7 @@
                     podemos ajudar sua empresa a crescer de forma organizada e eficiente.
                 </p>
                 <div class="cta-buttons">
-                    <a href="https://api.whatsapp.com/send?phone=5551999999999&text=Olá! Gostaria de saber mais sobre os serviços da CCP Soluções Contábeis." 
+                    <a href="https://api.whatsapp.com/send?phone=5548922268000&text=Olá! Gostaria de saber mais sobre os serviços da CCP Soluções Contábeis." 
                        class="btn btn-primary" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         WhatsApp
@@ -353,16 +349,16 @@
                     <h3 class="footer-title">Contato</h3>
                     <div class="footer-contact">
                         <div class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <span>(51) 9999-9999</span>
+                            <i class="fab fa-whatsapp"></i>
+                            <span>(48) 9222-6800 (Somente WhatsApp)</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>contato@ccpcontabil.com.br</span>
+                            <span>admccpsolucoes@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Rua das Flores, 123 - Centro<br>Porto Alegre - RS</span>
+                            <span>Rua Ilha dos Corais, 60 - Vargem do Bom Jesus<br>Florianópolis - SC</span>
                         </div>
                     </div>
                     <div class="social-links">
