--- a/servicos.html
+++ b/servicos.html
@@ -70,7 +70,7 @@
             <div class="overview-content">
                 <h2 class="section-title">Expertise em Todos os Departamentos</h2>
                 <p class="section-text">
-                    Nossa equipe é formada por profissionais especializados e altamente capacitados, 
+                    Nossa equipe é formada por profissionais especializados e altamente qualificados, 
                     distribuídos pelos Departamentos Contábil, Fiscal, Pessoal, Financeiro e Societário, 
                     garantindo atendimento completo e personalizado para sua empresa.
                 </p>
@@ -133,6 +133,8 @@
                             <li><i class="fas fa-check"></i> Registro na Junta Comercial</li>
                             <li><i class="fas fa-check"></i> Inscrições municipais e estaduais</li>
                             <li><i class="fas fa-check"></i> Alvará de funcionamento</li>
+                            <li><i class="fas fa-check"></i> Alvará de Licença Sanitária</li>
+                            <li><i class="fas fa-check"></i> Licença do Corpo de Bombeiros</li>
                         </ul>
                     </div>
                 </div>
@@ -171,7 +173,7 @@
                     <div class="service-content">
                         <p class="service-description">
                             Declaração completa do Imposto de Renda para pessoa física e jurídica, 
-                            maximizando restituições e garantindo conformidade fiscal.
+                            maximizando restituições e atendendo a legislação fiscal.
                         </p>
                         <ul class="service-features">
                             <li><i class="fas fa-check"></i> IRPF - Pessoa Física</li>
@@ -183,25 +185,25 @@
                     </div>
                 </div>
 
-                <!-- MEI -->
+                <!-- Certificação Digital -->
                 <div class="service-card-detailed" data-aos="fade-up" data-aos-delay="400">
                     <div class="service-header">
                         <div class="service-icon">
-                            <i class="fas fa-user-tie"></i>
+                            <i class="fas fa-certificate"></i>
                         </div>
-                        <h3 class="service-title">Contabilidade MEI</h3>
+                        <h3 class="service-title">Certificação Digital</h3>
                     </div>
                     <div class="service-content">
                         <p class="service-description">
-                            Gestão contábil especializada para microempreendedores individuais, 
-                            simplificando obrigações e maximizando benefícios.
+                            ECF e ECNPJ - Certificados digitais para pessoa física e jurídica, 
+                            garantindo segurança e agilidade em processos eletrônicos.
                         </p>
                         <ul class="service-features">
-                            <li><i class="fas fa-check"></i> Abertura de MEI</li>
-                            <li><i class="fas fa-check"></i> Emissão de DAS</li>
-                            <li><i class="fas fa-check"></i> Declaração anual DASN</li>
-                            <li><i class="fas fa-check"></i> Alterações contratuais</li>
-                            <li><i class="fas fa-check"></i> Orientação tributária</li>
+                            <li><i class="fas fa-check"></i> Certificado Digital PF (ECF)</li>
+                            <li><i class="fas fa-check"></i> Certificado Digital PJ (ECNPJ)</li>
+                            <li><i class="fas fa-check"></i> Renovação de certificados</li>
+                            <li><i class="fas fa-check"></i> Instalação e configuração</li>
+                            <li><i class="fas fa-check"></i> Suporte técnico especializado</li>
                         </ul>
                     </div>
                 </div>
@@ -271,6 +273,7 @@
                             <li><i class="fas fa-check"></i> Fluxo de caixa</li>
                             <li><i class="fas fa-check"></i> Relatórios gerenciais</li>
                             <li><i class="fas fa-check"></i> Planejamento estratégico</li>
+                            <li><i class="fas fa-check"></i> BPO Financeiro e Contábil</li>
                         </ul>
                     </div>
                 </div>
@@ -291,6 +294,7 @@
                         <ul class="service-features">
                             <li><i class="fas fa-check"></i> Mudança de endereço</li>
                             <li><i class="fas fa-check"></i> Alteração de objeto social</li>
+                            <li><i class="fas fa-check"></i> Inclusão e exclusão de atividades</li>
                             <li><i class="fas fa-check"></i> Entrada/saída de sócios</li>
                             <li><i class="fas fa-check"></i> Aumento de capital</li>
                             <li><i class="fas fa-check"></i> Mudança de nome empresarial</li>
@@ -315,8 +319,8 @@
                             <li><i class="fas fa-check"></i> Baixa na Receita Federal</li>
                             <li><i class="fas fa-check"></i> Baixa estadual e municipal</li>
                             <li><i class="fas fa-check"></i> Encerramento de atividades</li>
-                            <li><i class="fas fa-check"></i> Quitação de débitos</li>
-                            <li><i class="fas fa-check"></i> Documentação final</li>
+                            <li><i class="fas fa-check"></i> Parcelamento de débitos</li>
+                            <li><i class="fas fa-check"></i> Distrato</li>
                         </ul>
                     </div>
                 </div>
@@ -415,7 +419,7 @@
                 <div class="step-item" data-aos="fade-up" data-aos-delay="200">
                     <div class="step-number">02</div>
                     <div class="step-content">
-                        <h3 class="step-title">Fale com a Gente</h3>
+                        <h3 class="step-title">Fale Conosco</h3>
                         <p class="step-description">
                             Nossa equipe especializada desenvolve soluções personalizadas 
                             para atender perfeitamente suas demandas empresariais.
@@ -496,16 +500,16 @@
                     <h3 class="footer-title">Contato</h3>
                     <div class="footer-contact">
                         <div class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <span>(51) 9999-9999</span>
+                            <i class="fab fa-whatsapp"></i>
+                            <span>(48) 9222-6800 (Somente WhatsApp)</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>contato@ccpcontabil.com.br</span>
+                            <span>admccpsolucoes@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Rua das Flores, 123 - Centro<br>Porto Alegre - RS</span>
+                            <span>Rua Ilha dos Corais, 60 - Vargem do Bom Jesus<br>Florianópolis - SC</span>
                         </div>
                     </div>
                     <div class="social-links">
