--- a/sobre.html
+++ b/sobre.html
@@ -71,12 +71,12 @@
                 <div class="text-content">
                     <h2 class="section-title">Nossa História</h2>
                     <p class="section-text">
-                        Fundada há mais de 25 anos, a <strong>CCP Soluções Contábeis</strong> nasceu com o propósito 
+                        A <strong>CCP Soluções Contábeis</strong> nasceu com o propósito 
                         de oferecer serviços contábeis de excelência, combinando tradição e inovação para 
                         atender às necessidades de empresas de todos os segmentos.
                     </p>
                     <p class="section-text">
-                        Ao longo de nossa trajetória, construímos uma sólida reputação baseada na confiança, 
+                        Ao longo de nossa trajetória de mais de 20 anos, construímos uma sólida reputação baseada na confiança, 
                         competência técnica e relacionamento próximo com nossos clientes. Nossa experiência 
                         nos permitiu acompanhar as transformações do mercado e da legislação, sempre mantendo 
                         nossos clientes em conformidade e preparados para os desafios do mundo empresarial.
@@ -88,7 +88,11 @@
                     </p>
                 </div>
                 <div class="image-content">
-                    <img src="images/about-history.jpg" alt="História da CCP" class="about-image">
+                    <img src="images/cinara.png" alt="Cinara - Fundadora e CEO" class="about-image">
+                    <div class="image-caption">
+                        <h4>Cinara</h4>
+                        <p>Fundadora e CEO</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -147,9 +151,6 @@
                 </p>
             </div>
             <div class="team-content">
-                <div class="team-image">
-                    <img src="images/team-photo.jpg" alt="Equipe CCP Soluções Contábeis" class="team-img">
-                </div>
                 <div class="team-info">
                     <h3 class="team-title">Expertise Multidisciplinar</h3>
                     <p class="team-description">
@@ -310,16 +311,16 @@
                     <h3 class="footer-title">Contato</h3>
                     <div class="footer-contact">
                         <div class="contact-item">
-                            <i class="fas fa-phone"></i>
-                            <span>(51) 9999-9999</span>
+                            <i class="fab fa-whatsapp"></i>
+                            <span>(48) 9222-6800 (Somente WhatsApp)</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <span>contato@ccpcontabil.com.br</span>
+                            <span>admccpsolucoes@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <span>Rua das Flores, 123 - Centro<br>Porto Alegre - RS</span>
+                            <span>Rua Ilha dos Corais, 60 - Vargem do Bom Jesus<br>Florianópolis - SC</span>
                         </div>
                     </div>
                     <div class="social-links">
