--- a/servicos.html
+++ b/servicos.html
@@ -24,7 +24,9 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <img src="images/logo-ccp.png" alt="CCP Soluções Contábeis" class="logo">
+                    <a href="index.html">
+                        <img src="images/logo-ccp.png" alt="CCP Soluções Contábeis" class="logo">
+                    </a>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
@@ -464,78 +466,12 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <div class="footer-brand">
-                        <img src="images/logo-ccp-white.png" alt="CCP Soluções Contábeis" class="footer-logo">
-                        <p class="footer-description">
-                            Soluções contábeis modernas e eficientes para empresas de todos os segmentos. 
-                            Sua parceira de confiança há mais de 20 anos.
-                        </p>
-                    </div>
-                </div>
-                <div class="footer-section">
-                    <h3 class="footer-title">Serviços</h3>
-                    <ul class="footer-links">
-                        <li><a href="servicos.html">Abertura de Empresa</a></li>
-                        <li><a href="servicos.html">Contabilidade</a></li>
-                        <li><a href="servicos.html">Imposto de Renda</a></li>
-                        <li><a href="servicos.html">Departamento Pessoal</a></li>
-                        <li><a href="servicos.html">Consultoria Fiscal</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3 class="footer-title">Empresa</h3>
-                    <ul class="footer-links">
-                        <li><a href="sobre.html">Sobre Nós</a></li>
-                        <li><a href="sobre.html">Nossa Missão</a></li>
-                        <li><a href="sobre.html">Nossa Equipe</a></li>
-                        <li><a href="contato.html">Contato</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h3 class="footer-title">Contato</h3>
-                    <div class="footer-contact">
-                        <div class="contact-item">
-                            <i class="fab fa-whatsapp"></i>
-                            <span>(48) 9222-6800 (Somente WhatsApp)</span>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-envelope"></i>
-                            <span>admccpsolucoes@gmail.com</span>
-                        </div>
-                        <div class="contact-item">
-                            <i class="fas fa-map-marker-alt"></i>
-                            <span>Rua Ilha dos Corais, 60 - Vargem do Bom Jesus<br>Florianópolis - SC</span>
-                        </div>
-                    </div>
-                    <div class="social-links">
-                        <a href="#" class="social-link">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#" class="social-link">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#" class="social-link">
-                            <i class="fab fa-linkedin-in"></i>
-                        </a>
-                        <a href="#" class="social-link">
-                            <i class="fab fa-whatsapp"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 CCP Soluções Contábeis. Todos os direitos reservados.</p>
-            </div>
-        </div>
-    </footer>
+    <!-- Footer Placeholder -->
+    <div id="footer-placeholder"></div>
 
     <!-- Scripts -->
     <script src="js/config.js"></script>
+    <script src="js/components.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="js/script.js"></script>
 </body>
