--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header">
+    <header class="header slide-in-top">
         <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
@@ -57,7 +57,7 @@
             <div class="hero-content">
                 <h1 class="hero-title">
                     Soluções Contábeis <br>
-                    <span class="text-primary">para Você e sua Empresa</span>
+                    <span class="text-primary slide-in-left">para Você e sua Empresa</span>
                 </h1>
                 <p class="hero-subtitle">
                     Mais de 20 anos de experiência oferecendo assessoria contábil completa, 
