--- a/contato.html
+++ b/contato.html
@@ -198,8 +198,8 @@
                     <div class="map-details">
                         <h3>Como Chegar</h3>
                         <p>
-                            Nosso escritório está localizado no centro de Porto Alegre, 
-                            com fácil acesso por transporte público e estacionamento próximo.
+                            Nosso escritório está localizado na Rua Ilha dos Corais, 60, no bairro Vargem do Bom Jesus, em Florianópolis/SC, CEP
+                            88056-597, com fácil acesso e estacionamento próximo.
                         </p>
                         <ul class="location-features">
                             <li><i class="fas fa-bus"></i> Próximo ao transporte público</li>
