--- a/contato.html
+++ b/contato.html
@@ -87,7 +87,7 @@
                             <h3>Atendimento via WhatsApp</h3>
                             <p>Clique no botão abaixo para iniciar uma conversa conosco:</p>
                             <a href="https://api.whatsapp.com/send?phone=554892226800&text=Olá! Gostaria de saber mais sobre os serviços da CCP Soluções Contábeis." 
-                               class="btn btn-primary whatsapp-btn" target="_blank">
+                               class="btn btn-primary whatsapp-btn btn-slide-in" target="_blank">
                                 <i class="fab fa-whatsapp"></i>
                                 Iniciar Conversa
                             </a>
@@ -322,7 +322,7 @@
                 </p>
                 <div class="cta-buttons">
                     <a href="https://api.whatsapp.com/send?phone=5548922268000&text=Olá! Gostaria de agendar uma consultoria gratuita com a CCP." 
-                       class="btn btn-primary" target="_blank">
+                       class="btn btn-primary btn-slide-in" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         Agendar Agora
                     </a>
