--- a/manutencao.html
+++ b/manutencao.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site em Manutenção - CCP Soluções Contábeis</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/logo-ccp.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/logo-ccp.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/logo-ccp.png">
+    <link rel="shortcut icon" href="images/logo-ccp.png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
