--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- EXEMPLO: Novo feedback adicionado -->
+                <!-- Feedback real da Katherine Arroyo -->
                 <div class="testimonial-item">
                     <div class="testimonial-content">
                         <div class="stars">
@@ -225,13 +225,12 @@
                             <i class="fas fa-star"></i>
                         </div>
                         <p class="testimonial-text">
-                            "Serviço excepcional! A CCP nos ajudou a organizar toda nossa contabilidade e 
-                            ainda conseguiu reduzir nossos custos tributários significativamente."
+                            "Atendimento rápido e muito proativo, linguagem simples e posso dizer que minha contadora é a minha parceira pra esclarecimento de dúvidas e tomada de decisões. CCP me ajuda muito."
                         </p>
                         <div class="testimonial-author">
                             <div class="author-info">
-                                <h4 class="author-name">Roberto Santos</h4>
-                                <p class="author-position">Diretor, TechSolutions Ltda</p>
+                                <h4 class="author-name">Katherine Arroyo</h4>
+                                <p class="author-position">Proprietária, Elescano</p>
                             </div>
                         </div>
                     </div>
