--- a/servicos.html
+++ b/servicos.html
@@ -203,11 +203,11 @@
                     </div>
                     <div class="service-content">
                         <p class="service-description">
-                            ECF e ECNPJ - Certificados digitais para pessoa física e jurídica, 
+                            ECPF e ECNPJ - Certificados digitais para pessoa física e jurídica, 
                             garantindo segurança e agilidade em processos eletrônicos.
                         </p>
                         <ul class="service-features">
-                            <li><i class="fas fa-check"></i> Certificado Digital PF (ECF)</li>
+                            <li><i class="fas fa-check"></i> Certificado Digital PF (ECPF)</li>
                             <li><i class="fas fa-check"></i> Certificado Digital PJ (ECNPJ)</li>
                             <li><i class="fas fa-check"></i> Renovação de certificados</li>
                             <li><i class="fas fa-check"></i> Instalação e configuração</li>
