--- a/index.html
+++ b/index.html
@@ -235,6 +235,30 @@
                         </div>
                     </div>
                 </div>
+                <!-- Feedback real do Marcelo Madeira -->
+                <div class="testimonial-item">
+                    <div class="testimonial-content">
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <p class="testimonial-text">
+                            "Sou cliente da CCP Soluções e já contei com os serviços deles nas áreas fiscal, pessoal e societária. Sempre fui
+                            atendido com muita eficiência, atenção e profissionalismo. Quando contrato a CCP, sinto como se eles estivessem dentro
+                            da minha empresa, cuidando de tudo com proximidade e responsabilidade. A equipe é competente, atenciosa e resolve de
+                            verdade. Super indico!"
+                        </p>
+                        <div class="testimonial-author">
+                            <div class="author-info">
+                                <h4 class="author-name">Marcelo Madeira</h4>
+                                <p class="author-position">Diretor, Grupo Madeira</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="testimonial-nav">
                 <button class="nav-btn prev-btn">
@@ -245,6 +269,7 @@
                     <span class="dot" data-slide="1"></span>
                     <span class="dot" data-slide="2"></span>
                     <span class="dot" data-slide="3"></span>
+                    <span class="dot" data-slide="4"></span>
                 </div>
                 <button class="nav-btn next-btn">
                     <i class="fas fa-chevron-right"></i>
