--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <div class="testimonial-author">
                             <div class="author-info">
                                 <h4 class="author-name">Marcelo Madeira</h4>
-                                <p class="author-position">Diretor, Grupo Madeira</p>
+                                <p class="author-position">CEO, MPMMAIS CONSULTORIA</p>
                             </div>
                         </div>
                     </div>
